--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "react-multi-select-component": "^4.2.1",
     "react-prefixer": "^2.0.1",
     "react-router-dom": "^6.2.1",
-    "react-scripts": "5.0.0",
+    "react-scripts": "^5.0.0",
     "react-select": "^5.2.2",
     "styled-components": "^5.3.3",
     "web-vitals": "^2.1.4",
